--- a/README.Rmd
+++ b/README.Rmd
@@ -2,11 +2,19 @@
 output: github_document
 ---
 
+<!-- badges: start -->
+[![CRAN status](https://www.r-pkg.org/badges/version/prevederer)](https://cran.r-project.org/package=prevederer)
+[![Travis build status](https://travis-ci.org/wkdavis/prevederer.svg?branch=master)](https://travis-ci.org/wkdavis/prevederer)
+[![AppVeyor build status](https://ci.appveyor.com/api/projects/status/github/wkdavis/prevederer?branch=master&svg=true)](https://ci.appveyor.com/project/wkdavis/prevederer)
+[![Codecov test coverage](https://codecov.io/gh/wkdavis/prevederer/branch/master/graph/badge.svg)](https://codecov.io/gh/wkdavis/prevederer?branch=master)
+<!-- badges: end -->
+
 # prevederer
 R package for accessing the Prevedere API. Access to the Prevedere API requires 
 an API key.
 
 # Installation
+
 ```{r install, eval = FALSE}
 devtools::install_github("wkdavis/prevederer")
 ```
@@ -29,6 +37,5 @@ api_key = "xyz123"
 provider = "provider_a"
 provider_id = "a123"
 
-prevedere.api.set_key(api_key)
-prevedere.api.indicator_series(provider, provider_id)
+prevedere_indicator_series(api_key, provider, provider_id)
 ```
