--- a/README.Rmd
+++ b/README.Rmd
@@ -2,6 +2,15 @@
 output: github_document
 ---
 
+<!-- README.md is generated from README.Rmd. Please edit that file -->
+
+```{r, echo = FALSE}
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  fig.path = "README-"
+)
+```
+
 <!-- badges: start -->
 [![CRAN status](https://www.r-pkg.org/badges/version/prevederer)](https://cran.r-project.org/package=prevederer)
 [![Travis build status](https://travis-ci.org/wkdavis/prevederer.svg?branch=master)](https://travis-ci.org/wkdavis/prevederer)
